@@ -7,8 +7,6 @@ import com.google.common.collect.Lists;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.heigit.ohsome.oshdb.grid.GridOSHEntity;
 import org.heigit.ohsome.oshdb.grid.GridOSHRelations;
 import org.heigit.ohsome.oshdb.osh.OSHRelation;
 import org.heigit.ohsome.oshdb.util.celliterator.CellIterator.IterateAllEntry;
@@ -23,8 +21,8 @@ import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Polygon;
 
 /**
- * Tests the {@link CellIterator#iterateByContribution(GridOSHEntity)} method on special situations
- * which are related to OSHDB grid cells.
+ * Tests the {@link CellIterator#iterateByContribution(OSHEntitySource)} method on special
+ * situations which are related to OSHDB grid cells.
  */
 class IterateByContributionNotOsmTypeSpecificTest {
 
@@ -68,8 +66,8 @@ class IterateByContributionNotOsmTypeSpecificTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(resultPoly.isEmpty());
   }
 
@@ -98,8 +96,8 @@ class IterateByContributionNotOsmTypeSpecificTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(resultPoly.isEmpty());
   }
 
@@ -129,8 +127,8 @@ class IterateByContributionNotOsmTypeSpecificTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertFalse(resultPoly.isEmpty());
   }
 
